# DevOps-Platform-Swarm

./: .gitignore  AGENT1_CODE_ANALYSER.md  AGENT2_PIPELINE_GENERATOR.md  README.md  pyproject.toml  run.sh
fix_knowledge/: iAshishHere_ThinkARCH.json
src/devops_guardian/: api.py  main.py
src/devops_guardian/agents/: __init__.py
src/devops_guardian/agents/code_analyser/: graph.py  prompts.py
src/devops_guardian/agents/code_analyser/scanners/: architecture.py  cicd.py  cloud.py  deployment.py  docker.py  env_vars.py  frameworks.py  installed_packages.py  languages.py  packages.py  tests.py
src/devops_guardian/agents/pipeline_generator/: graph.py  prompts.py
src/devops_guardian/agents/pipeline_generator/generators/: pipelines.py  platform.py
src/devops_guardian/models/: __init__.py  analysis.py  common.py  pipeline.py
src/devops_guardian/orchestrator/: __init__.py
src/devops_guardian/utils/: fix_knowledge.py  github_ops.py  job_manager.py  llm.py  repo_ops.py  run_logger.py
