[project]
name = "devops-guardian"
version = "0.1.0"
description = "Multi-agent DevOps analysis and automation platform"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.4",
    "langchain-openai>=0.3",
    "langchain-community>=0.3",
    "pygithub>=2.3",
    "pydantic>=2.0",
    "gitpython>=3.1",
    "typer>=0.12",
    "rich>=13.0",
    "python-dotenv>=1.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
]

[project.scripts]
devops-guardian = "devops_guardian.main:app"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
